@@ -1,3 +1,8 @@
+2008-12-19  Christophe Romain <christophe.romain@process-one.net>
+
+	* src/mod_pubsub/mod_pubsub.erl: Fix send_last_published_item issue
+	when running on clustered table (thanks to Vincent Barat)(EJAB-793)
+
 2008-12-18  Christophe Romain <christophe.romain@process-one.net>
 
 	* src/mod_pubsub/mod_pubsub.erl: Check option of the nodetree instead
